manifests/base/influxdb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb2
  namespace: "b4mad-racing-test"
spec:
  template:
    spec:
      containers:
        - name: influxdb
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
